Ask Vagrant ip adress.

--- a/templates/Vagrantfile
+++ b/templates/Vagrantfile
@@ -1,5 +1,5 @@
 $BOX = "ubuntu/xenial64"
-$IP = "10.0.0.10"
+$IP = "{{ vagrant_ip }}"
 $MEMORY = ENV.has_key?('VM_MEMORY') ? ENV['VM_MEMORY'] : "1024"
 $CPUS = ENV.has_key?('VM_CPUS') ? ENV['VM_CPUS'] : "1"
 
